# pesde

./: Cargo.toml
crates/registry/: Cargo.toml  build.rs
crates/registry-backend-mysql/fixtures/: seed.sql
crates/registry/fixtures/: key  key.pub
crates/registry/fixtures/test-package/: pesde.toml
crates/registry/src/: main.rs
crates/registry/src/api/: mod.rs
crates/registry/src/frontend/: mod.rs
crates/registry/src/frontend/assets/css/: base.css  main.css  navbar.css  vars.css
docs/: bun.lockb  package.json
docs/src/: env.d.ts  middleware.ts
docs/src/components/: PackageDocsLayout.astro
docs/src/lib/: markdown.ts  registry-api.ts
src/: download.rs  lib.rs
src/cli/commands/cas/: prune.rs
src/source/: fs.rs
src/source/legacy_pesde/: backend.rs
